--- a/Practica5-Referencia/src/main/webapp/WEB-INF/web.xml
+++ b/Practica5-Referencia/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns = "https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation = "https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" version = "6.0" metadata-complete = "false">
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+	version="6.0" metadata-complete="false">
 	<display-name>Practica3</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
@@ -21,4 +24,12 @@
 		<servlet-name>ImageServlet</servlet-name>
 		<url-pattern>/image</url-pattern>
 	</servlet-mapping>
+	<listener>
+		<listener-class>listeners.WebSessionListener</listener-class>
+	</listener>
+
+	<session-config>
+		<session-timeout>15</session-timeout>
+	</session-config>
+
 </web-app>
